--- a/templates/base.html
+++ b/templates/base.html
@@ -5,18 +5,25 @@
     <title>Title</title>
 
     <link rel="stylesheet" href="/static/blog/css/home_site.css">
-    <link rel="stylesheet" href="/static/theme/{{ blog.theme }}">
+{#    <link rel="stylesheet" href="/static/theme/{{ blog.theme }}">#}
     <link rel="stylesheet" href="/static/blog/css/article_detail.css">
     <link rel="stylesheet" href="/static/blog/bs/css/bootstrap.css">
     <script src="/static/js/jquery-3.2.1.min.js"></script>
+    <style>
+                .header {
+            width: 100%;
+            height: 60px;
+            background-color: #369;
 
+        }
+    </style>
 </head>
 <body>
 
 <div class="header">
     <div class="content">
         <p class="title">
-            <span>{{ blog.title }}</span>
+            <span>{{ user }}</span>
             <a href="/cn_backend/" class="backend">管理</a>
         </p>
     </div>
