--- a/templates/article_detail.html
+++ b/templates/article_detail.html
@@ -17,7 +17,7 @@
                 <div class="buryit action">
                     <span class="burynum" id="bury_count">{{ article_obj.down_count }}</span>
                 </div>
-                <div class="clear clearfix"></div>
+                <div class="clear"></div>
                 <div class="diggword" id="digg_tips" style="color: red;"></div>
             </div>
         </div>
@@ -64,7 +64,7 @@
 
             </script>
 
-
+            <hr>
             <p>评论列表</p>
 
             <ul class="list-group comment_list">
